--- a/meccsek.html
+++ b/meccsek.html
@@ -1045,7 +1045,7 @@ async function loadUserBetsFromServer() {
 // --- 7. INDÍTÁS ---
 let isInitialized = false;
 
-// 1. Az oldal alapfunkciói (meccsek, UI, stb.)
+// 1. Oldal funkciók (Meccsek, UI) - TELJESEN KÜLÖN, hogy ne álljon le semmi
 async function initSiteFunctions() {
     try {
         if (typeof updateUI === 'function') updateUI(); 
@@ -1069,11 +1069,12 @@ async function initSiteFunctions() {
     }
 }
 
-// 2. A Clerk kezelése
+// 2. A Clerk indítása
 async function startApp() {
     if (localStorage.getItem('theme') === 'light') document.body.classList.add('light');
 
-    initSiteFunctions(); // Meccsek indítása azonnal
+    // A meccseket és UI-t azonnal indítjuk
+    initSiteFunctions();
 
     let t = 0;
     while (typeof Clerk === 'undefined' && t < 30) { 
@@ -1084,9 +1085,9 @@ async function startApp() {
     if (typeof Clerk === 'undefined') return;
 
     try {
-        // --- KRITIKUS JAVÍTÁS ITT ---
+        // KÖTELEZŐ: routing: 'virtual' a betöltéskor is!
         await Clerk.load({
-            routing: 'virtual', // Ez kötelező a load-nál is!
+            routing: 'virtual',
             signInUrl: '/meccsek.html',
             signUpUrl: '/meccsek.html'
         });
@@ -1117,10 +1118,11 @@ async function startApp() {
                     e.preventDefault(); 
                     e.stopPropagation();
                     
-                    // --- KRITIKUS JAVÍTÁS A MODALHOZ ---
-                    Clerk.openSignUp({ 
-                        routing: 'virtual', // Virtuális mód
-                        signInUrl: '/meccsek.html', // Hol találja a Sign In-t a modalon belül
+                    // JAVÍTÁS: openSignIn-t nyitunk meg, mert ebben a stabilabb a váltás
+                    Clerk.openSignIn({ 
+                        routing: 'virtual',
+                        signInUrl: '/meccsek.html',
+                        signUpUrl: '/meccsek.html',
                         afterSignUpUrl: window.location.origin + '/meccsek.html',
                         afterSignInUrl: window.location.origin + '/meccsek.html'
                     });
@@ -1131,9 +1133,11 @@ async function startApp() {
         isInitialized = true; 
 
     } catch (error) {
-        console.error("Clerk error:", error);
+        console.error("Clerk hiba:", error);
     }
 }
+window.onload = startApp;
+        
 // --- MOBIL NAVIGÁCIÓ JAVÍTÁSA ---
 function toggleM(id) { 
     // Minden oldalsáv bezárása először
@@ -1166,11 +1170,10 @@ function saveState() {
     }
 }
 
-window.addEventListener('load', startApp);
-
     </script>
 </body>
 </html>
+
 
 
 
