--- a/meccsek.html
+++ b/meccsek.html
@@ -11,175 +11,137 @@
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Inter:wght@300;500;800&display=swap" rel="stylesheet">
     <style>
         :root {
-            --bg: #020617;
-            --glass: rgba(15, 23, 42, 0.75);
-            --neon-green: #00ff88;
-            --neon-blue: #0ea5e9;
-            --neon-red: #ff3e3e;
-            --text: #f1f5f9;
-            --border: rgba(255, 255, 255, 0.1);
-            --cl-gs: #0044ff; --el-gs: #cc7a00; --ecl-q: #00cc6a; --po: #d35400; --rel: #ff3e3e;
-        }
-
-        body.light {
-            --bg: #f8fafc;
-            --glass: rgba(255, 255, 255, 0.85);
-            --text: #0f172a;
-            --border: rgba(0, 0, 0, 0.1);
-            --neon-blue: #0284c7;
-        }
-
-        * { margin: 0; padding: 0; box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
-
-        body { background: var(--bg); color: var(--text); font-family: 'Inter', sans-serif; height: 100vh; overflow: hidden; position: relative; transition: background 0.5s; }
-
-        .bg-animation { position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -1; overflow: hidden; filter: blur(100px); opacity: 0.5; }
-        .blob { position: absolute; width: 600px; height: 600px; border-radius: 50%; mix-blend-mode: screen; animation: move 25s infinite alternate ease-in-out; }
-        .blob-1 { background: var(--cl-gs); top: -10%; left: -10%; }
-        .blob-2 { background: var(--neon-green); bottom: -10%; right: -10%; animation-delay: -5s; }
-        .blob-3 { background: var(--el-gs); top: 30%; left: 30%; animation-delay: -10s; }
-        @keyframes move { 0% { transform: translate(0, 0) scale(1); } 100% { transform: translate(10vw, 10vh) scale(1.2); } }
-
-        #goal-banner {
-            position: fixed; top: -100px; left: 0; right: 0; height: 65px; z-index: 9999 !important;
-            background: var(--neon-green); color: #000; display: flex; align-items: center; justify-content: center;
-            font-family: 'Orbitron'; font-weight: 900; font-size: 1.6rem; z-index: 2000; 
-            transition: 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275); box-shadow: 0 0 50px rgba(0,255,136,0.6);
-        }
-        #goal-banner.show { top: 75px; }
-
-        nav { 
-            position: fixed; top: 0; left: 0; right: 0; height: 75px; 
-            display: flex; justify-content: space-between; align-items: center; 
-            padding: 0 30px; background: var(--glass); backdrop-filter: blur(20px); 
-            border-bottom: 1px solid var(--border); z-index: 1000; 
-        }
-        .logo { font-family: 'Orbitron'; font-weight: 900; font-size: 1.4rem; color: var(--neon-blue); letter-spacing: 3px; }
-
-        .nav-tools { display: flex; gap: 10px; }
-        .tool-btn { 
-            background: rgba(255,255,255,0.05); border: 1px solid var(--border);
-            color: var(--text); padding: 8px 14px; border-radius: 10px;
-            cursor: pointer; font-family: 'Orbitron'; font-size: 10px; transition: 0.3s;
-        }
-        .tool-btn:hover { border-color: var(--neon-blue); background: rgba(14, 165, 233, 0.2); }
-
-        .main-wrapper { display: flex; height: 100vh; padding-top: 75px; }
-        .sidebar, .standings-sidebar { background: var(--glass); backdrop-filter: blur(25px); overflow-y: auto; border: 1px solid var(--border); }
-        .sidebar { width: 300px; }
-        .standings-sidebar { width: 430px; padding: 20px; }
-
-        .sidebar-header { padding: 20px; font-family: 'Orbitron'; font-size: 11px; color: var(--neon-blue); border-bottom: 1px solid var(--border); letter-spacing: 2px; text-transform: uppercase; }
-
-        .content-area { flex: 1; overflow-y: auto; padding: 25px; scrollbar-width: none; }
-
-        .match-card {
-            background: rgba(30, 41, 59, 0.4); border: 1px solid var(--border); border-radius: 24px;
-            padding: 20px; margin-bottom: 15px; display: flex; align-items: center; transition: 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-        }
-        .match-card:hover { border-color: var(--neon-blue); background: rgba(30, 41, 59, 0.6); transform: translateY(-4px); }
-
-        .team-link { flex: 1; display: flex; flex-direction: column; align-items: center; gap: 8px; cursor: pointer; }
-        .team-link img { width: 55px; height: 55px; object-fit: contain; transition: 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275); }
-        .team-link:hover img { transform: rotate(15deg) scale(1.2); filter: drop-shadow(0 0 12px var(--neon-blue)); }
-        .team-link span { font-weight: 800; font-family: 'Orbitron'; font-size: 11px; text-align: center; }
-
-        .score-display { font-family: 'Orbitron'; font-size: 2.2rem; font-weight: 900; color: var(--neon-green); }
-        .score-live { color: var(--neon-red); animation: pulse 1s infinite; text-shadow: 0 0 15px var(--neon-red); }
-      @keyframes goal-pulse {
-    0% { 
-        box-shadow: 0 0 5px #ff3e3e, inset 0 0 5px #ff3e3e; 
-        border-color: #ff3e3e;
-        transform: scale(1);
-    }
-    50% { 
-        box-shadow: 0 0 40px #ff3e3e, inset 0 0 20px #ff3e3e; 
-        border-color: #ff4d4d;
-        transform: scale(1.02); /* Kicsit megugrik a kártya */
-    }
-    100% { 
-        box-shadow: 0 0 5px #ff3e3e, inset 0 0 5px #ff3e3e; 
-        border-color: #ff3e3e;
-        transform: scale(1);
-    }
-}
-.mobile-quick-nav {
-    z-index: 9000 !important;
-    position: fixed !important;
-    bottom: 20px; /* Biztosítsd, hogy ne lógjon ki alul */
-}
-.match-card.goal-highlight {
-    animation: goal-pulse 0.8s ease-in-out infinite !important;
-    border: 2px solid #ff3e3e !important;
-    background: rgba(255, 62, 62, 0.15) !important; /* Kap egy enyhe pirosas hátteret is */
-    z-index: 100; /* Hogy a többi kártya fölé emelkedjen */
-    position: relative;
+    /* Új színpaletta a kép alapján */
+    --bg: #0f0c15;
+    --glass: rgba(255, 255, 255, 0.03);
+    --glass-heavy: rgba(255, 255, 255, 0.07);
+    --neon-purple: #c32aff;
+    --neon-pink: #ff2a8a;
+    --neon-blue: #0ea5e9;
+    --neon-green: #00ff88;
+    --text: #ffffff;
+    --text-dim: #a0a0a0;
+    --border: rgba(255, 255, 255, 0.08);
 }
 
-        .standings-table { width: 100%; border-collapse: separate; border-spacing: 0 6px; }
-        .standings-table td { padding: 14px 8px; background: rgba(255,255,255,0.03); text-align: center; border-top: 1px solid var(--border); border-bottom: 1px solid var(--border); font-size: 12px; }
-        .pos-col { border-left-width: 5px !important; border-left-style: solid !important; }
+* { margin: 0; padding: 0; box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
 
-        .pos-num-box { 
-            width: 34px; height: 34px; line-height: 34px; margin: 0 auto; 
-            border-radius: 8px; font-weight: 900; font-family: 'Orbitron'; font-size: 12px; 
-            box-shadow: 0 4px 10px rgba(0,0,0,0.3);
-        }
-        .zone-tag { font-size: 8px; font-family: 'Orbitron'; display: block; margin-bottom: 4px; font-weight: 900; }
-        .highlight td { background: rgba(0, 255, 136, 0.15) !important; border-color: var(--neon-green) !important; }
-
-        .league-item { margin: 8px 15px; padding: 12px 15px; border-radius: 14px; display: flex; align-items: center; gap: 12px; cursor: pointer; transition: 0.3s; border: 1px solid transparent; }
-        .league-item.active { background: rgba(0, 255, 136, 0.1); border-color: var(--neon-green); }
-
-        .date-strip { display: flex; gap: 12px; margin-bottom: 25px; overflow-x: auto; scrollbar-width: none; }
-        .date-pill { flex: 0 0 auto; padding: 10px 18px; border-radius: 12px; background: rgba(255,255,255,0.03); border: 1px solid var(--border); cursor: pointer; font-family: 'Orbitron'; font-size: 10px; }
-        .date-pill.active { border-color: var(--neon-green); color: var(--neon-green); background: rgba(0,255,136,0.05); }
-        .date-pill.is-today { border-color: var(--neon-blue); color: var(--neon-blue); border-width: 2px; }
-
-        .mobile-nav { position: fixed; bottom: 0; left: 0; right: 0; height: 70px; background: var(--glass); display: none; justify-content: space-around; align-items: center; z-index: 1100; border-top: 1px solid var(--border); backdrop-filter: blur(20px); }
-        @media (max-width: 1100px) {
-            .sidebar, .standings-sidebar { position: fixed; top: 75px; bottom: 70px; width: 85%; z-index: 1050; transform: translateX(-105%); background: var(--bg); }
-            .standings-sidebar { right: 0; transform: translateX(105%); }
-            .sidebar.open, .standings-sidebar.open { transform: translateX(0); }
-            .mobile-nav { display: flex; }
-        }
-@keyframes goal-flash {
-    0% { background-color: rgba(255, 62, 62, 0.95); transform: scale(1.02); }
-    50% { background-color: rgba(255, 62, 62, 0.3); transform: scale(1); }
-    100% { background-color: rgba(255, 62, 62, 0.95); transform: scale(1.02); }
+body { 
+    background: var(--bg); 
+    color: var(--text); 
+    font-family: 'Inter', sans-serif; 
+    height: 100vh; 
+    overflow: hidden;
 }
 
-/* Az egész kártya ÉS a benne lévő összes div villogjon */
-.match-card.goal-highlight, 
-.match-card.goal-highlight div, 
-.match-card.goal-highlight span {
-    animation: goal-flash 0.5s ease-in-out infinite !important;
-    color: white !important; /* Gól alatt legyen fehér a szöveg a jobb olvashatóságért */
-    border-color: #ffffff !important;
+/* Kép szerinti lágy háttérfények */
+.bg-animation { 
+    position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -1; 
+    filter: blur(120px); opacity: 0.4; 
+}
+.blob { position: absolute; width: 500px; height: 500px; border-radius: 50%; }
+.blob-1 { background: var(--neon-purple); top: -10%; left: -10%; }
+.blob-2 { background: var(--neon-pink); bottom: -10%; right: -10%; }
+
+/* Navigáció - Tisztább üveg hatás */
+nav { 
+    position: fixed; top: 0; left: 0; right: 0; height: 75px; 
+    display: flex; justify-content: space-between; align-items: center; 
+    padding: 0 30px; background: rgba(15, 12, 21, 0.8); 
+    backdrop-filter: blur(30px); border-bottom: 1px solid var(--border); z-index: 1000; 
 }
 
-.match-card.goal-highlight {
-    z-index: 1000;
-    position: relative;
-    box-shadow: 0 0 50px rgba(255, 62, 62, 0.8);
+.logo { font-family: 'Orbitron'; font-weight: 900; font-size: 1.4rem; color: #fff; letter-spacing: 2px; }
+
+/* Match Card - A kép stílusa szerint kerekítve és árnyékolva */
+.match-card {
+    background: var(--glass);
+    backdrop-filter: blur(15px);
+    border: 1px solid var(--border);
+    border-radius: 32px; /* Extra kerekített sarkok */
+    padding: 24px;
+    margin-bottom: 15px;
+    transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
-      .odds-btn {
-    background: rgba(255, 255, 255, 0.05);
-    border: 1px solid rgba(255, 255, 255, 0.1);
-    border-radius: 4px;
-    color: white;
-    transition: all 0.2s;
-    cursor: pointer;
+
+.match-card:hover {
+    background: var(--glass-heavy);
+    transform: translateY(-5px) scale(1.01);
+    box-shadow: 0 20px 40px rgba(0,0,0,0.4);
+    border-color: rgba(255, 255, 255, 0.2);
+}
+
+/* Csapat logók és szövegek */
+.team-link img { 
+    width: 60px; height: 60px; 
+    filter: drop-shadow(0 8px 15px rgba(0,0,0,0.3));
+}
+
+.score-display { 
+    font-family: 'Orbitron'; font-size: 2.4rem; font-weight: 900; 
+    background: linear-gradient(to bottom, #fff, #888);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+/* Tabella stílus - Kompakt és modern */
+.standings-sidebar { 
+    width: 430px; padding: 25px; 
+    background: rgba(15, 12, 21, 0.5);
+    border-left: 1px solid var(--border);
+}
+
+.standings-table td {
+    padding: 16px 10px;
+    background: transparent;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.03);
+    font-weight: 500;
+}
+
+/* Odds gombok - Kép szerinti lila/pink érintéssel */
+.odds-btn {
+    background: var(--glass-heavy);
+    border: 1px solid var(--border);
+    border-radius: 14px;
+    color: #fff;
+    padding: 10px;
+    font-family: 'Orbitron';
+    transition: 0.3s;
 }
 
 .odds-btn:hover {
-    background: rgba(0, 68, 255, 0.4);
-    border-color: #0044ff;
-    transform: translateY(-1px);
+    background: linear-gradient(45deg, var(--neon-purple), var(--neon-pink));
+    border-color: transparent;
+    color: #000;
+    font-weight: bold;
 }
 
-.odds-label { font-size: 9px; opacity: 0.6; margin-bottom: 2px; }
-.odds-val { font-family: 'Orbitron'; font-size: 11px; font-weight: bold; }
+/* Gól villanás - A kép neon stílusában */
+@keyframes goal-flash {
+    0% { box-shadow: 0 0 0px var(--neon-pink); border-color: var(--neon-pink); }
+    50% { box-shadow: 0 0 40px var(--neon-pink); border-color: #fff; transform: scale(1.02); }
+    100% { box-shadow: 0 0 0px var(--neon-pink); border-color: var(--neon-pink); }
+}
+
+.match-card.goal-highlight {
+    animation: goal-flash 0.6s ease-in-out infinite !important;
+    background: rgba(255, 42, 138, 0.15) !important;
+}
+
+/* Dátum választó - Kerekebb kapszulák */
+.date-pill {
+    padding: 12px 22px;
+    border-radius: 20px;
+    background: var(--glass);
+    border: 1px solid var(--border);
+    color: var(--text-dim);
+}
+
+.date-pill.active {
+    background: #fff;
+    color: #000;
+    border-color: #fff;
+}
 
     </style>
 </head>
@@ -1175,6 +1137,7 @@ function saveState() {
     </script>
 </body>
 </html>
+
 
 
 
