--- a/meccsek.html
+++ b/meccsek.html
@@ -11,10 +11,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Inter:wght@300;500;800&display=swap" rel="stylesheet">
     <style>
         :root {
-    /* Új színpaletta a kép alapján */
-    --bg: #0f0c15;
+    --bg: #0b090f;
     --glass: rgba(255, 255, 255, 0.03);
-    --glass-heavy: rgba(255, 255, 255, 0.07);
+    --glass-heavy: rgba(255, 255, 255, 0.08);
     --neon-purple: #c32aff;
     --neon-pink: #ff2a8a;
     --neon-blue: #0ea5e9;
@@ -22,126 +21,138 @@
     --text: #ffffff;
     --text-dim: #a0a0a0;
     --border: rgba(255, 255, 255, 0.08);
+    --card-shadow: 0 20px 40px rgba(0, 0, 0, 0.6);
 }
 
-* { margin: 0; padding: 0; box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
-
-body { 
-    background: var(--bg); 
-    color: var(--text); 
-    font-family: 'Inter', sans-serif; 
-    height: 100vh; 
-    overflow: hidden;
-}
-
-/* Kép szerinti lágy háttérfények */
+/* 1. EXTRA ANIMÁLT HÁTTÉR */
 .bg-animation { 
     position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -1; 
-    filter: blur(120px); opacity: 0.4; 
+    filter: blur(120px); opacity: 0.5; 
 }
-.blob { position: absolute; width: 500px; height: 500px; border-radius: 50%; }
-.blob-1 { background: var(--neon-purple); top: -10%; left: -10%; }
-.blob-2 { background: var(--neon-pink); bottom: -10%; right: -10%; }
+.blob { 
+    position: absolute; width: 600px; height: 600px; border-radius: 50%; 
+    mix-blend-mode: screen; 
+    animation: floating 20s infinite alternate ease-in-out;
+}
+.blob-1 { background: var(--neon-purple); top: -10%; left: -5%; animation-delay: 0s; }
+.blob-2 { background: var(--neon-pink); bottom: -10%; right: -5%; animation-delay: -5s; }
+.blob-3 { background: var(--neon-blue); top: 40%; left: 30%; width: 400px; height: 400px; opacity: 0.3; }
 
-/* Navigáció - Tisztább üveg hatás */
+@keyframes floating {
+    0% { transform: translate(0, 0) scale(1) rotate(0deg); }
+    33% { transform: translate(5vw, 10vh) scale(1.1) rotate(10deg); }
+    66% { transform: translate(-5vw, 15vh) scale(0.9) rotate(-10deg); }
+    100% { transform: translate(0, 0) scale(1) rotate(0deg); }
+}
+
+/* 2. PRÉMIUM NAVIGÁCIÓ */
 nav { 
-    position: fixed; top: 0; left: 0; right: 0; height: 75px; 
-    display: flex; justify-content: space-between; align-items: center; 
-    padding: 0 30px; background: rgba(15, 12, 21, 0.8); 
-    backdrop-filter: blur(30px); border-bottom: 1px solid var(--border); z-index: 1000; 
+    border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+    background: rgba(11, 9, 15, 0.7);
+    box-shadow: 0 10px 30px rgba(0,0,0,0.5);
 }
 
-.logo { font-family: 'Orbitron'; font-weight: 900; font-size: 1.4rem; color: #fff; letter-spacing: 2px; }
-
-/* Match Card - A kép stílusa szerint kerekítve és árnyékolva */
+/* 3. MECCSKÁRTYA REFORM */
 .match-card {
-    background: var(--glass);
-    backdrop-filter: blur(15px);
-    border: 1px solid var(--border);
-    border-radius: 32px; /* Extra kerekített sarkok */
-    padding: 24px;
-    margin-bottom: 15px;
-    transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    border-radius: 28px;
+    background: linear-gradient(135deg, rgba(255,255,255,0.05) 0%, rgba(255,255,255,0.01) 100%);
+    border: 1px solid rgba(255, 255, 255, 0.05);
+    box-shadow: var(--card-shadow);
+    overflow: hidden;
+    position: relative;
 }
 
-.match-card:hover {
-    background: var(--glass-heavy);
-    transform: translateY(-5px) scale(1.01);
-    box-shadow: 0 20px 40px rgba(0,0,0,0.4);
-    border-color: rgba(255, 255, 255, 0.2);
+/* Üvegszálas csillogás effekt a kártyán */
+.match-card::before {
+    content: '';
+    position: absolute;
+    top: -50%; left: -50%; width: 200%; height: 200%;
+    background: radial-gradient(circle, rgba(255,255,255,0.05) 0%, transparent 70%);
+    opacity: 0; transition: opacity 0.5s; pointer-events: none;
 }
+.match-card:hover::before { opacity: 1; }
 
-/* Csapat logók és szövegek */
-.team-link img { 
-    width: 60px; height: 60px; 
-    filter: drop-shadow(0 8px 15px rgba(0,0,0,0.3));
-}
-
-.score-display { 
-    font-family: 'Orbitron'; font-size: 2.4rem; font-weight: 900; 
-    background: linear-gradient(to bottom, #fff, #888);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-
-/* Tabella stílus - Kompakt és modern */
-.standings-sidebar { 
-    width: 430px; padding: 25px; 
-    background: rgba(15, 12, 21, 0.5);
-    border-left: 1px solid var(--border);
-}
-
-.standings-table td {
-    padding: 16px 10px;
-    background: transparent;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.03);
-    font-weight: 500;
-}
-
-/* Odds gombok - Kép szerinti lila/pink érintéssel */
+/* 4. DINAMIKUS ODDS GOMBOK */
 .odds-btn {
-    background: var(--glass-heavy);
-    border: 1px solid var(--border);
-    border-radius: 14px;
-    color: #fff;
-    padding: 10px;
-    font-family: 'Orbitron';
-    transition: 0.3s;
+    position: relative;
+    overflow: hidden;
+    background: rgba(255, 255, 255, 0.03);
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 16px;
+    padding: 12px;
+    color: var(--text-dim);
+    font-weight: 600;
+    transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .odds-btn:hover {
-    background: linear-gradient(45deg, var(--neon-purple), var(--neon-pink));
-    border-color: transparent;
-    color: #000;
-    font-weight: bold;
+    color: #fff;
+    background: rgba(255, 255, 255, 0.08);
+    border-color: var(--neon-purple);
+    box-shadow: 0 0 20px rgba(195, 42, 255, 0.3);
+    transform: translateY(-2px);
 }
 
-/* Gól villanás - A kép neon stílusában */
-@keyframes goal-flash {
-    0% { box-shadow: 0 0 0px var(--neon-pink); border-color: var(--neon-pink); }
-    50% { box-shadow: 0 0 40px var(--neon-pink); border-color: #fff; transform: scale(1.02); }
-    100% { box-shadow: 0 0 0px var(--neon-pink); border-color: var(--neon-pink); }
+.odds-btn::after {
+    content: '';
+    position: absolute;
+    top: -50%; left: -50%; width: 200%; height: 200%;
+    background: conic-gradient(from 0deg, transparent, var(--neon-purple), transparent);
+    animation: rotate-border 4s linear infinite;
+    opacity: 0;
+}
+.odds-btn:hover::after { opacity: 0.2; }
+
+@keyframes rotate-border {
+    100% { transform: rotate(360deg); }
 }
 
+/* 5. GÓL-ANIMÁCIÓ (Neon Pulse) */
 .match-card.goal-highlight {
-    animation: goal-flash 0.6s ease-in-out infinite !important;
-    background: rgba(255, 42, 138, 0.15) !important;
+    animation: goal-glow 0.8s ease-in-out infinite alternate !important;
+    border: 2px solid var(--neon-pink) !important;
+    background: rgba(255, 42, 138, 0.1) !important;
 }
 
-/* Dátum választó - Kerekebb kapszulák */
+@keyframes goal-glow {
+    0% { box-shadow: 0 0 5px var(--neon-pink), inset 0 0 5px var(--neon-pink); }
+    100% { box-shadow: 0 0 30px var(--neon-pink), inset 0 0 15px var(--neon-pink); }
+}
+
+/* 6. TABELLA (Standings) EXTRA */
+.standings-table tr {
+    transition: transform 0.2s;
+}
+.standings-table tr:hover {
+    transform: scale(1.02);
+    z-index: 10;
+}
+.standings-table td {
+    border-bottom: 1px solid rgba(255, 255, 255, 0.02);
+    backdrop-filter: blur(5px);
+}
+
+/* 7. DÁTUM VÁLASZTÓ (Pill design) */
 .date-pill {
-    padding: 12px 22px;
-    border-radius: 20px;
-    background: var(--glass);
-    border: 1px solid var(--border);
-    color: var(--text-dim);
+    transition: all 0.4s ease;
+    border-radius: 18px;
+    border: 1px solid transparent;
+}
+.date-pill.active {
+    background: linear-gradient(45deg, var(--neon-purple), var(--neon-pink));
+    color: #fff;
+    box-shadow: 0 10px 20px rgba(255, 42, 138, 0.3);
+    font-weight: 800;
 }
 
-.date-pill.active {
-    background: #fff;
-    color: #000;
-    border-color: #fff;
+/* 8. SCROLLBAR DESIGN */
+::-webkit-scrollbar { width: 6px; }
+::-webkit-scrollbar-track { background: transparent; }
+::-webkit-scrollbar-thumb { 
+    background: rgba(255, 255, 255, 0.1); 
+    border-radius: 10px; 
 }
+::-webkit-scrollbar-thumb:hover { background: var(--neon-purple); }
 
     </style>
 </head>
@@ -1137,6 +1148,7 @@ function saveState() {
     </script>
 </body>
 </html>
+
 
 
 
