--- a/meccsek.html
+++ b/meccsek.html
@@ -64,14 +64,36 @@
         }
         .tool-btn:hover { border-color: var(--neon-blue); background: rgba(14, 165, 233, 0.2); }
 
-        .main-wrapper { display: flex; height: 100vh; padding-top: 75px; }
+        .main-wrapper {
+        display: flex;
+        width: 100vw;
+        overflow: hidden; /* Megakadályozza a vízszintes csúszkát */
+    }
         .sidebar, .standings-sidebar { background: var(--glass); backdrop-filter: blur(25px); overflow-y: auto; border: 1px solid var(--border); }
         .sidebar { width: 300px; }
-        .standings-sidebar { width: 430px; padding: 20px; }
+        .standings-sidebar {
+        position: fixed; /* Vagy sticky, ha a layout engedi */
+        top: 75px;
+        right: 0;
+        bottom: 0;
+        width: 400px; /* Fix szélesség PC-n */
+        transform: translateX(100%); /* Alapból rejtve jobbra */
+        z-index: 1001;
+        background: var(--glass);
+        backdrop-filter: blur(20px);
+        border-left: 1px solid var(--border);
+        transition: transform 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    }
 
         .sidebar-header { padding: 20px; font-family: 'Orbitron'; font-size: 11px; color: var(--neon-blue); border-bottom: 1px solid var(--border); letter-spacing: 2px; text-transform: uppercase; }
-
-        .content-area { flex: 1; overflow-y: auto; padding: 25px; scrollbar-width: none; }
+    .standings-sidebar.open {
+        transform: translateX(0); /* Beúszik */
+    }
+        
+       .content-area {
+        flex: 1; /* Ez kitölti a maradék helyet */
+        transition: margin-right 0.4s ease; /* Sima átmenet, ha a tabella nyílik */
+    }
 
         .match-card {
             background: rgba(30, 41, 59, 0.4); border: 1px solid var(--border); border-radius: 24px;
@@ -1285,6 +1307,7 @@ const startAction = (e) => {
     </script>
 </body>
 </html>
+
 
 
 
