--- a/meccsek.html
+++ b/meccsek.html
@@ -289,7 +289,22 @@
         .league-item { margin: 8px 15px; padding: 12px 15px; border-radius: 14px; display: flex; align-items: center; gap: 12px; cursor: pointer; transition: 0.3s; border: 1px solid transparent; }
         .league-item.active { background: rgba(0, 255, 136, 0.1); border-color: var(--neon-green); }
 
-        .date-strip { display: flex; gap: 12px; margin-bottom: 25px; overflow-x: auto; scrollbar-width: none; }
+        .date-strip {
+    display: flex;
+    gap: 12px;
+    margin-bottom: 25px;
+    overflow-x: auto;
+    scrollbar-width: none;
+    width: 100%; /* Kitölti a rendelkezésre álló helyet */
+    max-width: 850px; /* Igazodik a kártyákhoz */
+    justify-content: flex-start; /* Balról induljanak a gombok */
+    padding: 10px 5px;
+    flex-shrink: 0; /* Megakadályozza, hogy a flexbox összenyomja a magasságát */
+}
+        .date-strip::-webkit-scrollbar {
+    display: none;
+}
+        
         .date-pill { flex: 0 0 auto; padding: 10px 18px; border-radius: 12px; background: rgba(255,255,255,0.03); border: 1px solid var(--border); cursor: pointer; font-family: 'Orbitron'; font-size: 10px; }
         .date-pill.active { border-color: var(--neon-green); color: var(--neon-green); background: rgba(0,255,136,0.05); }
         .date-pill.is-today { border-color: var(--neon-blue); color: var(--neon-blue); border-width: 2px; }
@@ -1521,6 +1536,7 @@ const startAction = (e) => {
     </script>
 </body>
 </html>
+
 
 
 
