--- a/meccsek.html
+++ b/meccsek.html
@@ -311,18 +311,25 @@
 
         .mobile-nav { position: fixed; bottom: 0; left: 0; right: 0; height: 70px; background: var(--glass); display: none; justify-content: space-around; align-items: center; z-index: 1100; border-top: 1px solid var(--border); backdrop-filter: blur(20px); }
         @media (max-width: 1100px) {
-            .sidebar, .standings-sidebar { 
-        position: fixed; 
-        top: 75px; 
-        bottom: 70px; 
-        width: 85%; 
-        z-index: 1050; 
-        background: var(--bg);
-        /* Kiegészítés: */
-        transition: transform 0.4s cubic-bezier(0.25, 1, 0.5, 1);
-        will-change: transform;
-        box-shadow: 0 0 50px rgba(0,0,0,0.5);
+            .sidebar {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 280px; /* Mobilon legyen fix szélessége a menünek */
+        height: 100vh;
+        z-index: 2000;
+        background: #0f172a; /* Kell egy sötét háttér, különben átlátszik */
+        transform: translateX(-100%); /* TELJESEN KITOLJUK BALRA */
+        transition: transform 0.3s ease-in-out;
+        box-shadow: 10px 0 30px rgba(0,0,0,0.5);
     }
+        .main-wrapper {
+        display: block; /* Kikapcsoljuk a flex-et, hogy ne egymás mellé tegye őket */
+        position: relative;
+    }
+        .sidebar.active, .sidebar.open {
+        transform: translateX(0);
+    }     
         .date-strip {
         width: 100%; /* Kitölti a 800px-et */
         display: flex;
@@ -391,21 +398,18 @@
         pointer-events: auto;
     }
       .content-area {
-        padding: 40px 0; /* Több hely a nav alatt */
-        max-width: 800px; /* Ez lesz a fix oszlopszélességünk */
-        margin: 0 auto;
-        overflow-y: auto;
-        /* Az align-items: center marad, de a tartalom szélessége kontrollált */
+        margin-left: 0 !important; /* Mobilon TILOS a bal margó */
+        width: 100% !important;
+        padding: 15px; /* Adjunk egy kis lélegzetvételt a szélén */
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
           .match-card {
-        width: 100%; /* Pontosan olyan széles lesz, mint a felette lévő date-strip */
-        max-width: 800px;
-        margin-left: 0;
-        margin-right: 0;
-        gap: 40px;
-        padding: 20px 40px;
-        box-sizing: border-box; /* Ez kritikus, hogy a padding ne nyomja ki a széleket */
-    }  
+        width: 100%; /* Mobilon töltse ki a szélességet */
+        max-width: 100%;
+        padding: 15px; /* Mobilon kisebb padding kell a kártyának */
+    }
         }
 @keyframes goal-flash {
     0% { background-color: rgba(255, 62, 62, 0.95); transform: scale(1.02); }
@@ -1562,6 +1566,7 @@ const startAction = (e) => {
     </script>
 </body>
 </html>
+
 
 
 
