--- a/meccsek.html
+++ b/meccsek.html
@@ -559,15 +559,18 @@
     </nav>
 
     <div class="main-wrapper">
-        <aside class="sidebar" id="sidebar-leagues">
-            <div class="sidebar-header" id="h-leagues">
+    <aside class="sidebar" id="sidebar-leagues">
+        <div class="sidebar-header">
             <span class="header-emoji">🏆</span>
             <span class="header-text">BAJNOKSÁGOK</span>
-            <div id="league-list"></div>
-        </aside>
-        <main class="content-area">
-            <div id="date-strip" class="date-strip"></div>
-            <div id="match-container"></div>
+        </div>
+        <div id="league-list"></div>
+    </aside>
+
+    <main class="content-area">
+        <div id="date-strip" class="date-strip"></div>
+        <div id="match-container"></div>
+    </main>
 </div>
         </main>
         <aside class="standings-sidebar" id="sidebar-standings">
@@ -1623,6 +1626,7 @@ const startAction = (e) => {
     </script>
 </body>
 </html>
+
 
 
 
